docker: improve dockertfile